index update on July 27

--- a/index.html
+++ b/index.html
@@ -17,36 +17,36 @@
 		<h2>My Projects</h2>
 
 			<article id="project1">
-				<img src ="..." alt="Model S Catalog">
+				<img src ="..." alt="Model S Catalog img">
 				<h3>Model S Catalog</h3>
 				<p>Information materials that will help to discover all features of the serial electric car Tesla Model S</p>
 			</article>
 
 			<article id="project2">
-				<img src ="..." alt="Discovery Channel iPad">
+				<img src ="..." alt="Discovery Channel iPad img">
 				<h3>Discovery Channel iPad</h3>
 				<p>The space is designed to inspire, and pique curiosity and encourage visitors to express their own creativity</p>
 			</article>
 
 			<article id="project3">
-				<img src ="..." alt="Stuhrling">
+				<img src ="..." alt="Stuhrling img">
 				<h3>Stuhrling</h3>
 				<p>Flexible multi-concept portfolio theme  based on WordPress. Built by designers, for designers, creative agencies and studios.</p>
 			</article>
 
 			<article id="project4">
-				<img src ="..." alt="Infinity Spaces">
+				<img src ="..." alt="Infinity Spaces img">
 				<h3>Infinity Spaces</h3>
 				<p>Infinity ∞ is an abstract concept describing something without any limit and is relevant in a number of fields.</p>
 			</article>
 
 		<a href="#" target="_blank"><p>Show more projects</p></a>
 
-		<footer>
+		<div id="projects">
 			<h2>Showcasing your work has never been more fun</h2>
 			<p>Discover elegant solution for your online portfolio. Fast, reliable, affordable...</p>
 			<button>Get in touch</button>
-		</footer>
+		</div>
 
 	</section>
 	
@@ -60,7 +60,7 @@
 			<li><i class="fa fa-behance"></i>Behance</li>
 			<li><i class="fa fa-facebook"></i>Facebook</li>
 			<li><i class="fa fa-pinterest"></i>Pinterest</li>
-			<li><i class="fa fa-linkedin"></i></i>LinkedIn</li>
+			<li><i class="fa fa-linkedin"></i>LinkedIn</li>
 		</ul>
 
 		<p>Copyright &copy; 2015 SAGE Agency Worldwide. All rights reserved</p>
