--- a/index.html
+++ b/index.html
@@ -1,84 +1,114 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
+	<title>Sage: Let's Make It Awesome</title>
 	<meta charset="UTF-8">
-	<title>SIMPLE</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<link rel="stylesheet" href="css/reset.css">
+	<link href='http://fonts.googleapis.com/css?family=Titillium+Web:300,400' rel='stylesheet' type='text/css'>	
+	<link href='http://fonts.googleapis.com/css?family=Teko:300,400' rel='stylesheet' type='text/css'>	
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">	
+	<link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
 	<header>
-		<img src="img/photo-1421809313281-48f03fa45e9f.jpeg" alt="Main image" style="width:autopx; height:1010px;">
-		<h1>We build websites and apps that people love</h1>
-		<p>Full suite of internet services in the areas of website development, web-based enterprise solutions, corporate identity and advertisement.</p>
-		<button>Explore More</button>
+		<section class="top_bar">
+			<div class="container">
+				<div class="logo">
+					<a href="#"><img src="img/logo.svg"></a>
+				</div>
+				<nav class="navigation">
+					<ul>
+						<li class="active"><a href="#">Home</a></li>
+						<li><a href="#">Projects</a></li>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Blog</a></li>
+						<li><a href="#">Get in Touch</a></li>				
+					</ul>
+				</nav>
+			</div>	
+		</section>		
+		<section class="hero">
+			<nav>
+				<ul>
+					<li class="active"></li>
+					<li></li>
+					<li></li>
+					<li></li>
+				</ul>
+			</nav>
+			<div class="title container">
+				<h1 class="hero_title">We build websites and apps that people love</h1>
+				<p>Full suite of internet services in the areas of website development, web-based enterprise solutions, corporate identity and advertisement.</p>
+				<a href="#projects" class="explore">Explore More</a>
+			</div>			
+		</section>		
 	</header>
+	<main id="projects">
+		<section class="work clearfix">
+			<h2>My Projects</h2>
+			<article>	
+						<figure class="tesla">
+							<a href="#"><img src="img/projects/tesla.jpg" alt="Tesla"></a>					
+						</figure>
+						<h3>Model S</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum augue nunc, bibendum nec neque ut, aliquet ultrices ipsum.</p>				
 
-	<section>
-		<h2>My Projects</h2>
-
-			<article id="project1">
-				<img src ="..." alt="Model S Catalog img">
-				<h3>Model S Catalog</h3>
-				<p>Information materials that will help to discover all features of the serial electric car Tesla Model S</p>
+			</article>			
+			<article>			
+						<figure class="discovery">
+							<a href="#"><img src="img/projects/curiosity.jpg" alt="Curiosity"></a>					
+						</figure>	
+						<h3>Curiosity</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum augue nunc, bibendum nec neque ut, aliquet ultrices ipsum.</p>							
 			</article>
+			<article>
+						<figure class="stuhrling">
+							<a href="#"><img src="img/projects/stuhrling.jpg" alt="Sturhling"></a>					
+						</figure>
+						<h3>Sturhling</h3>
+						<p>Our self-initiated project.
+		Infinity ∞ is an abstract concept describing something without any limit and is relevant in a number of fields</p>				
 
-			<article id="project2">
-				<img src ="..." alt="Discovery Channel iPad img">
-				<h3>Discovery Channel iPad</h3>
-				<p>The space is designed to inspire, and pique curiosity and encourage visitors to express their own creativity</p>
 			</article>
-
-			<article id="project3">
-				<img src ="..." alt="Stuhrling img">
-				<h3>Stuhrling</h3>
-				<p>Flexible multi-concept portfolio theme  based on WordPress. Built by designers, for designers, creative agencies and studios.</p>
+			<article>
+						<figure class="penguin">
+							<a href="#"><img src="img/projects/penguin.jpg" alt="Penguin Books"></a>					
+						</figure>
+						<h3>Penguin Books</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum augue nunc, bibendum nec neque ut, aliquet ultrices ipsum.</p>				
 			</article>
-
-			<article id="project4">
-				<img src ="..." alt="Infinity Spaces img">
-				<h3>Infinity Spaces</h3>
-				<p>Infinity ∞ is an abstract concept describing something without any limit and is relevant in a number of fields.</p>
-			</article>
-
-		<a href="#" target="_blank"><p>Show more projects</p></a>
-
-		<div id="projects">
+			<div class="show_more clearfix">
+				<a href="#">Show More Projects</a>	
+			</div>
+		</section>
+		<section class="cta">
 			<h2>Showcasing your work has never been more fun</h2>
 			<p>Discover elegant solution for your online portfolio. Fast, reliable, affordable...</p>
-			<button>Get in touch</button>
-		</div>
+			<a href="#" class="button">Get In Touch</a>
+		</section>
+		<section class="contact">
+			<div class="container">
+				<h2>Stay Connected</h2>
+				<p>Join us on our social networks for all the latest updates, product/service announcements and many more</p>
 
-	</section>
-	
+				<ul class="social">
+					<li><a href="#"><i class="fa fa-behance"></i>Behance</a></li>
+					<li><a href="#"><i class="fa fa-facebook"></i> Facebook</a></li>
+					<li><a href="#"><i class="fa fa-pinterest-p"></i>Pinterest</a></li>
+					<li><a href="#"><i class="fa fa-linkedin"></i>LinkedIn</a></li>				
+				</ul>
+			</div>	
+		</section>
+
+	</main>
+	<footer class="copyright container">
+		<p>Copyright &copy; 2015 SAGE Agency Worldwide. All rights reserved.</p>
+	</footer>
 </body>
 
-
-<footer>
-	<h2>Stay connected</h2>
-	<p>Join us on our social networks for all the latest updates, product/service announcements and many more</p>
-		<ul>
-			<li><i class="fa fa-behance"></i>Behance</li>
-			<li><i class="fa fa-facebook"></i>Facebook</li>
-			<li><i class="fa fa-pinterest"></i>Pinterest</li>
-			<li><i class="fa fa-linkedin"></i>LinkedIn</li>
-		</ul>
-
-		<p>Copyright &copy; 2015 SAGE Agency Worldwide. All rights reserved</p>
-
-
-</footer>
 </html>
-
-
-
-
-
-
-
-
-
-
-
 
 
 
